--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="Myfavourite">My Favourite</string>
     <string name="Dashboard">Dashboard</string>
     <string name="entername">Enter You Nmae</string>
+    <string name="enterlocation">Enter You Location</string>
     <string name="enterbankaccno">Enter Valide Bank AccNo</string>
     <string name="enterzipcode">Enter Valide Zip Code</string>
     <string name="fillthedetails">Fill The details</string>
@@ -37,5 +38,26 @@
     <string name="enterpassword">Enter Your Password</string>
 
     <string name="api_key">AIzaSyAlkeMUimRynoWVCZXB17UuC0UjsZYtw2w</string>
+    <string name="addproduct">Add New Product</string>
+
+    <!--    addnewproduct-->
+    <string name="product_name">Product Name</string>
+    <string name="producttype">Product Type</string>
+    <string name="categories">Categories</string>
+    <string name="subcategories">Sub-Categories</string>
+    <string name="Stock">Stock</string>
+    <string name="prodweight">Product Weight</string>
+    <string name="discount">Discount</string>
+    <string name="retailprice">Retail Price</string>
+    <string name="gst">GST</string>
+    <string name="description">Description</string>
+    <string name="uloadimage">Upload\nImage</string>
+    <string name="servicecharges">Service Charge</string>
+    <string name="commission">Commission</string>
+    <string name="totalpayment">Total Payment</string>
+    <string name="supercategory">Super Category</string>
+    <string name="dimention">Dimention</string>
+    <string name="color">Color</string>
+    <string name="quentity">Quentity</string>
 
 </resources>
